[project]
name = "knowledge-mcp-server"
version = "0.1.0"
description = "MCP Server for knowledge base search (SSE/stdio)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
